...
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        tableView.deselectRow(at: indexPath, animated: true)
    }
    
    // MARK: CategoryTableViewCellDelegate
    func buyFood(food: FoodModel) {
        let alert = UIAlertController.init(title: "Покупка", message: "Вы купили \(food.foodName!)", preferredStyle: .alert)
        let alertAction = UIAlertAction.init(title: "Ok", style: .default) { (UIAlertAction) in
            alert.dismiss(animated: true, completion: nil)
        }
        alert.addAction(alertAction)
        self.navigationController?.present(alert, animated: true, completion: nil)
    }
    
...
